# DropDex2

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  launch.command  metadata.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: analysis_feature_writer.py  analysis_import_service.py  auth.py  bundle_import_service.py  config.py  import_jobs.py  import_service.py  main.py  models.py  rekordbox_parser.py  related_tracks_service.py  rescan_service.py  supabase_pagination.py  supabase_writer.py  upload_stream.py  user_settings.py  validation.py
backend/app/discovery/: __init__.py  job_runner.py  models.py  repository.py  routes.py  service.py
backend/scripts/: parse_fixture.py  reset_invalid_completed_scrapes.sql
backend/tests/: conftest.py  test_1001tracklists_detail_parser.py  test_1001tracklists_parser.py  test_cue_reconciliation.py  test_discovery.py  test_discovery_routes.py  test_import.py  test_import_job_lifecycle.py  test_pagination.py  test_related_tracks.py  test_rescan_service.py  test_setlist_detail_workflow.py  test_staged_import.py  test_tracklists1001_browser.py
bridge/: README.md  pyproject.toml
bridge/rekordbox_bridge/: __init__.py  __main__.py  cli.py  discovery.py  extractor.py  models.py  security.py  uploader.py
bridge/tests/: test_cli.py  test_discovery.py  test_extractor.py  test_security.py  test_uploader.py
docs/: developer-guide.md  qa-checklist.md  (+1 more)
importer/: .env.example  README.md  backfill_keys.py  check_env.py  import_export_library.py  pyproject.toml  requirements.txt  verify_import.py
importer/dropdex_importer/: __init__.py  __main__.py  analysis_models.py  analysis_paths.py  analysis_storage.py  anlz_parser.py  beatgrid_parser.py  cue_parser.py  models.py  music_keys.py  parser.py  phrase_parser.py  reparse.py  supabase_writer.py  validation.py  waveform_parser.py
importer/tests/: test_advanced_extraction.py  test_anlz_foundation.py  test_beatgrid_parser.py  test_cue_parser.py  test_music_keys.py  test_phrase_parser.py  test_reparse.py  test_waveform_parser.py
(+236 files in other folders)
