[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rekordbox-bridge"
version = "1.0.0"
description = "Extract Rekordbox Related Tracks and upload to DropDex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyrekordbox>=0.4",
]

[project.scripts]
rekordbox-bridge = "rekordbox_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rekordbox_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "BLE"]
