[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dropdex-importer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyrekordbox @ git+https://github.com/dylanljones/pyrekordbox.git@f695541827cc488af267d6ca8a8e0052598d85a0",
    "sqlcipher3>=0.5.0",
    "supabase>=2.4.0,<3.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dropdex_importer*"]
